@@ -1,2 +1,3 @@
 2.3.1:
  - Ensure getStatusButtonDrawable() gets a value it can use, to prevent an ArrayIndexOutOfBoundsException
+ - Fix DateIndexer to return proper section if there are no log entries for today
